<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.knowmovies.activities.DetailsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movieImageHeight"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/iv_detail_movie_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_movie_bg"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/poster_none" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/fabStyle"
            android:onClick="addMovieFavorite"
            app:backgroundTint="@color/fab_bg"
            app:layout_anchor="@id/collapsing_toolbar"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_title_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/twentyDPS">

                    <ImageView
                        android:id="@+id/iv_detail_movie_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/eightDPS"
                        android:layout_marginRight="@dimen/eightDPS"
                        android:contentDescription="@string/content_movie_poster"
                        tools:src="@drawable/poster_none" />

                    <TextView
                        android:id="@+id/tv_detail_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/iv_detail_movie_poster"
                        android:layout_toRightOf="@id/iv_detail_movie_poster"
                        android:paddingLeft="@dimen/eightDPS"
                        android:paddingRight="@dimen/eightDPS"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/detailsMovie_text_size"
                        android:textStyle="bold"
                        tools:text="@string/sample_movieTitle" />

                    <TextView
                        android:id="@+id/tv_detail_movie_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_movie_title"
                        android:layout_toEndOf="@id/iv_detail_movie_poster"
                        android:layout_toRightOf="@id/iv_detail_movie_poster"
                        android:paddingLeft="@dimen/eightDPS"
                        android:paddingStart="@dimen/eightDPS"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/detailsMovie_text_size"
                        android:textStyle="bold"
                        tools:text="@string/sample_movieYear" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_movie_year"
                        android:layout_toEndOf="@id/iv_detail_movie_poster"
                        android:layout_toRightOf="@id/iv_detail_movie_poster"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/eightDPS"
                            android:text="@string/released_on"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_detail_movie_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/sixDPS"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/movie_title_size"
                            tools:text="@string/release_date" />

                        <TextView
                            android:id="@+id/tv_detail_movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/eightDPS"
                            android:paddingTop="@dimen/eightDPS"
                            android:paddingBottom="@dimen/eightDPS"
                            android:paddingLeft="@dimen/sixteenDPS"
                            android:paddingRight="@dimen/sixteenDPS"
                            android:background="@drawable/rect"
                            tools:text="@string/avg_rate" />

                    </LinearLayout>
                </RelativeLayout>


                <View style="@style/dividerViewStyle" />

                <TextView
                    android:id="@+id/tv_detail_movie_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/sixteenDPS"
                    android:paddingLeft="@dimen/sixteenDPS"
                    android:paddingRight="@dimen/sixteenDPS"
                    android:paddingTop="@dimen/eightDPS"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sixteenDPS"
                    tools:text="@string/sample_description" />

                <View style="@style/dividerViewStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/trailer"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/heading_size" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View style="@style/dividerViewStyle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_review_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/review"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/heading_size" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/eightDPS"
                        android:background="@color/colorCardViewItem" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>